--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="icon" type="image/png" href="favicon.png" sizes="16x16">
 	<link href='https://fonts.googleapis.com/css?family=Arizonia' rel='stylesheet'>
-	<link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css">
 	<link rel="stylesheet" type="text/css" href="css/profile.css">
 	<link rel="stylesheet" type="text/css" href="css/profile576.css">
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
@@ -122,7 +121,7 @@
 					<img class="modal-img" src="img/lependu.jpg" alt="Project 1">
 					<div class="modal-body">
 						<h2 class="modal-title">Le Pendu</h2>
-						<p><img class="icon" src="img/code.svg" alt="code icon"> Ruby, Sinatra, Javascript, JQuery, AJAX, RSpec, HTML, CSS, FLStudio (music production), Photoshop</p>
+						<p class="code-text"><img class="icon" src="img/code.svg" alt="code icon"> Ruby, Sinatra, Javascript, JQuery, AJAX, RSpec, HTML, CSS, FLStudio (music production), Photoshop</p>
 						<p>Le Pendu is a hangman game built on top of Sinatra for Ruby. The name is French for "Hanged Man", borrowed from the title of the picture used as the main background, drawn by Albert Besnard in 1873. I used elements of this picture for a slight plot twist on the original hangman. In this game, the player is a witch trying to remember a spell to prevent a criminal from escaping the hanging.</p>
 						<p>The project focuses on a full stack, from Sinatra to Javascript, rounding out with design work and music production. Capybara/RSpec was very useful for ironing out game logic. It is important that any sound must be expected by the player, so the game begins muted. The controls must persist across all pages and HTTP requests. Also, the music cannot be interrupted by the POST requests used by the guesses. Therefore, the game uses AJAX to send JSON strings to Sinatra to bypass the rendering. </p>
 						<p>The second problem, then, is limiting the features dependent on Javascript so that the game could be played even without it. Therefore, careful considerations were necessary to make sure the default HTML elements were functional even without Javascript. Using JQuery to handle keypress events, then sending them with AJAX is more aesthetically pleasing than typing in a textbox and submitting a form. Of course, players on a mobile phone cannot type without a focus for the onscreen keyboard, so the textbox needs to be visible and in the right place when the screen gets too small.</p>
@@ -231,22 +230,22 @@
 					<div class="course-taken">
 						<h2>Introduction to Computer Organization (CS33)</h2>
 						<p>Introductory course on computer architecture, assembly language, and operating systems fundamentals. Number systems, machine language, and assembly language. Procedure calls, stacks, interrupts, and traps. Assemblers, linkers, and loaders. Operating systems concepts: processes and process management, input/output (I/O) programming, memory management, file systems.</p>
-						<p><img class="icon" src="img/code.svg" alt="code icon"> C, Assembly</p>
+						<p class="code-text"><img class="icon" src="img/code.svg" alt="code icon"> C, Assembly</p>
 					</div>
 					<div class="course-taken">
 						<h2>Software Construction Lab (CS35L)</h2>
 						<p>Fundamentals of commonly used software tools and environments, particularly open-source tools to be used in upper-division computer science courses.</p>
-						<p><img class="icon" src="img/code.svg" alt="code icon"> Bash, C, Python, Git</p>
+						<p class="code-text"><img class="icon" src="img/code.svg" alt="code icon"> Bash, C, Python, Git</p>
 					</div>
 					<div class="course-taken">
 						<h2>Logic Design of Digital Systems (CSM51A)</h2>
 						<p>Introduction to digital systems. Specification and implementation of combinational and sequential systems. Standard logic modules and programmable logic arrays. Specification and implementation of algorithmic systems: data and control sections. Number systems and arithmetic algorithms. Error control codes for digital information.</p>
-						<p><img class="icon" src="img/code.svg" alt="code icon"> Verilog</p>
+						<p class="code-text"><img class="icon" src="img/code.svg" alt="code icon"> Verilog</p>
 					</div>
 					<div class="course-taken">
 						<h2>Operating Systems Principles (CS111)</h2>
 						<p>Introduction to operating systems design and evaluation. Computer software systems performance, robustness, and functionality. Kernel structure, bootstrapping, input/output (I/O) devices and interrupts. Processes and threads; address spaces, memory management, and virtual memory. Scheduling, synchronization. File systems: layout, performance, robustness. Distributed systems: networking, remote procedure call (RPC), asynchronous RPC, distributed file systems, transactions. Protection and security. Exercises involving applications using, and internals of, real-world operating systems.</p>
-						<p><img class="icon" src="img/code.svg" alt="code icon"> C, Bash, Ruby</p>
+						<p class="code-text"><img class="icon" src="img/code.svg" alt="code icon"> C, Bash, Ruby</p>
 					</div>
 					<div class="course-taken">
 						<h2>Intro to Algorithms and Complexity (CS180)</h2>
