Shortened section ids

--- a/index.html
+++ b/index.html
@@ -23,17 +23,17 @@
 	  </button>
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
             <div class="navbar-nav">
-                <a class="nav-item nav-link active" href="#intro-section">About <span class="sr-only">(current)</span></a>
-                <a class="nav-item nav-link" href="#project-section">Projects</a>
-                <a class="nav-item nav-link" href="#skills-section">Skills</a>
-                <a class="nav-item nav-link" href="#experience-section">Experience</a>
-                <a class="nav-item nav-link" href="#education-section">Education</a>
-                <a class="nav-item nav-link" href="#mooc-section">MOOCs</a>
-                <a class="nav-item nav-link" href="#contact-section">Contact</a>
+                <a class="nav-item nav-link active" href="#intro">About <span class="sr-only">(current)</span></a>
+                <a class="nav-item nav-link" href="#project">Projects</a>
+                <a class="nav-item nav-link" href="#skills">Skills</a>
+                <a class="nav-item nav-link" href="#experience">Experience</a>
+                <a class="nav-item nav-link" href="#education">Education</a>
+                <a class="nav-item nav-link" href="#mooc">MOOCs</a>
+                <a class="nav-item nav-link" href="#contact">Contact</a>
             </div>
         </div>
     </nav>
-    <header id="intro-section">
+    <header id="intro">
         <svg id="text-effect">
 			  <defs>
 			    <pattern id="effects" width="1" height="3" patternUnits="userSpaceOnUse" patternTransform="rotate(45)">
@@ -73,7 +73,7 @@
             </div>
         </div>
     </header>
-    <section id="project-section">
+    <section id="project">
         <div class="container">
             <h1>
                 <svg class="text">
@@ -140,7 +140,7 @@
             </div>
         </div>
     </section>
-    <section id="skills-section">
+    <section id="skills">
         <div class="container">
             <h1>
                 <svg class="text">
@@ -186,7 +186,7 @@
             </div>
         </div>
     </section>
-    <section id="experience-section">
+    <section id="experience">
         <div class="container">
             <h1>
                 <svg class="text">
@@ -203,7 +203,7 @@
             </ul>
         </div>
     </section>
-    <section id="education-section">
+    <section id="education">
         <div class="container">
             <h1>
                 <svg class="text">
@@ -267,7 +267,7 @@
             </div>
         </div>
     </section>
-    <section id="mooc-section">
+    <section id="mooc">
         <svg id="mooc-divider" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 100 9.95" preserveAspectRatio="none">
 				<polygon points="100 0 100 10 0 10">
 			</svg>
@@ -451,7 +451,7 @@
             </div>
         </div>
     </section>
-    <footer id="contact-section">
+    <footer id="contact">
         <div class="container">
             <h1>
                 <svg class="text">
